Wed Oct 16 17:19 2013 CDT
    * lib/channel.js, lib/user.js: Only kick users on permissions
      violations.  Fail silently on bad packets.

Mon Oct 14 18:13 2013 CDT
    * lib/channel.js, lib/database.js: Add a separate database query
      for saving ranks on login (insert only, do nothing if the name
      exists).  Should make it actually impossible to ever lose rank
      when logging in (I thought it was impossible before but someone
      claimed it happened).

Mon Oct 14 16:37 2013 CDT
    * lib/bgtask.js: Add an interval for dumping all loaded channels
    * lib/channel.js: Remove per-channel dump interval
    * lib/config.js: Add config key for channel save interval

Mon Oct 14 16:30 2013 CDT
    * lib/server.js: Rate-limit socket.io connections
    * lib/bgtask.js: Periodically clear out old rate limiters

Sat Oct 12 19:43 2013 CDT
    * lib/user.js: Fix jumpTo kick bug (and delete)
    * lib/api.js: Fix unloaded channel API listing bug

Sat Oct 12 19:02 2013 CDT
    * lib/chatcommand.js: Fix poll import

Sat Oct 12 18:58 2013 CDT
    * lib/user.js, lib/channel.js: Improve strictness of data checking
      to prevent errors from incoming bad data.  Kick users who send
      bad data or attempt channel moderation with insufficient rank.

Sat Oct 12 18:24 2013 CDT
    * lib/user.js: Fix bad chatMsg packet causing exceptions

Sat Oct 12 15:53 2013 CDT
    * lib/channel.js: Add a try-catch to playlist loading to catch
      the mysterious error that's been coming up (corrupt pl?)

Mon Oct 07 19:00 2013 CDT
    * lib/channel.js: Rearrange the callback order to prevent database
      lookups from racing with the playlist queue.
    * tests/naokosimulator2013.js: Flood the first 10 videos all at once.
      Should provide better test coverage for race conditions (especially
      on localhost where the latency is ~0)

Mon Oct 07 10:02 2013 CDT
    * lib/channel.js: Fix several cases where an unregistered channel