@@ -38,6 +38,7 @@ var Channel = function(name) {
     // Initialize defaults
     self.registered = false;
     self.users = [];
+    self.mutedUsers = new $util.Set();
     self.playlist = new Playlist(self);
     self.plqueue = new AsyncQueue();
     self.position = -1;
@@ -1096,6 +1097,9 @@ Channel.prototype.broadcastNewUser = function(user) {
             self.namebans[user.name.toLowerCase()] !== null) {
             self.kick(user, "You're banned!");
             return;
+        }
+        if (self.mutedUsers.contains(user.name.toLowerCase())) {
+            user.meta.icon = "icon-volume-off";
         }
         self.sendAll("addUser", {
             name: user.name,
@@ -2181,7 +2185,7 @@ Channel.prototype.tryChat = function(user, data) {
     if(!this.hasPermission(user, "chat"))
         return;
 
-    if(user.muted) {
+    if (this.mutedUsers.contains(user.name.toLowerCase())) {
         user.socket.emit("noflood", {
             action: "chat",
             msg: "You have been muted on this channel."
