@@ -117,7 +117,7 @@ function handleMute(chan, user, args) {
                 return;
             }
             person.meta.icon = "icon-volume-off";
-            person.muted = true;
+            chan.mutedUsers.add(person.name.toLowerCase());
             chan.broadcastUserUpdate(person);
             chan.logger.log("*** " + user.name + " muted " + args[0]);
         }
@@ -143,7 +143,7 @@ function handleUnmute(chan, user, args) {
                 return;
             }
             person.meta.icon = false;
-            person.muted = false;
+            chan.mutedUsers.remove(person.name.toLowerCase());
             chan.broadcastUserUpdate(person);
             chan.logger.log("*** " + user.name + " unmuted " + args[0]);
         }
