@@ -33,7 +33,6 @@ var User = function (socket) {
         afk: false,
         icon: false
     };
-    this.muted = false;
     this.throttle = {};
     this.flooded = {};
     this.queueLimiter = $util.newRateLimiter();
