@@ -1,3 +1,37 @@
+/* 
+    Set prototype- simple wrapper around JS objects to
+    manipulate them like a set
+*/
+var Set = function (items) {
+    this._items = {};
+    var self = this;
+    if (items instanceof Array)
+        items.forEach(function (it) { self.add(it); });
+};
+
+Set.prototype.contains = function (what) {
+    return (what in this._items);
+};
+
+Set.prototype.add = function (what) {
+    this._items[what] = true;
+};
+
+Set.prototype.remove = function (what) {
+    if (what in this._items)
+        delete this._items[what];
+};
+
+Set.prototype.clear = function () {
+    this._items = {};
+};
+
+Set.prototype.forEach = function (fn) {
+    for (var k in this._items) {
+        fn(k);
+    }
+};
+
 module.exports = {
     isValidChannelName: function (name) {
         return name.match(/^[\w-_]{1,30}$/);
@@ -127,5 +161,7 @@ module.exports = {
             default:
                 return "";
         }
-    }
+    },
+
+    Set: Set
 };
