@@ -1,3 +1,10 @@
+Wed Oct 16 17:34 2013 CDT
+    * lib/utilities.js: Add a "Set" wrapper around objects to represent
+      sets.
+    * lib/channel.js, lib/user.js: Change the way muting works- muted
+      users are stored in a set and are automatically muted when they
+      join (this set is not persisted across restarts, however).
+
 Wed Oct 16 17:19 2013 CDT
     * lib/channel.js, lib/user.js: Only kick users on permissions
       violations.  Fail silently on bad packets.
